bubba-frontend (2.1.47) vincent hugo; urgency=low

  * Fix tyop, requrie → require

 -- Carl Fürstenberg <carl@excito.com>  Mon, 04 Jul 2011 13:19:27 +0200

bubba-frontend (2.1.46) vincent hugo; urgency=low

  * Adding more german translations (Closes: #1690)

 -- Carl Fürstenberg <carl@excito.com>  Thu, 16 Jun 2011 15:28:44 +0200

bubba-frontend (2.1.45) vincent hugo; urgency=low

  * Inline text field and updated text

 -- Carl Fürstenberg <carl@excito.com>  Wed, 08 Jun 2011 12:46:58 +0200

bubba-frontend (2.1.44) vincent hugo; urgency=low

  * Adding missing slash in default lange loading

 -- Carl Fürstenberg <carl@excito.com>  Wed, 08 Jun 2011 10:43:18 +0200

bubba-frontend (2.1.43) vincent hugo; urgency=low

  * Updating german translation

 -- Carl Fürstenberg <carl@excito.com>  Wed, 08 Jun 2011 10:37:55 +0200

bubba-frontend (2.1.42) vincent hugo; urgency=low

  * Syntax error in php file, Fales → false
  * More message updates (Closes: #1685)

 -- Carl Fürstenberg <carl@excito.com>  Tue, 07 Jun 2011 18:14:14 +0200

bubba-frontend (2.1.41) vincent hugo; urgency=low

  * Check for nullness
  * Return true on backup creation
  * wrong logic for timeline
  * Passing backup and main through jshint
  * Make sure create doesn't result in internal error
  * Change system backup menu text (Closes: #1674)
  * Adding translation check script
  * Make restore conformation close the dialog (Closes: #1675)
  * Fix missing end tag in backup view (Closes: #1680)
  * Message changes for custom select of backup job (Closes: #1677)
  * Remove fn-input-text class from radio buttons (Closes: #1676)
  * Updating message strings (Closes: #1679)
  * Enforce alphanumreric backup name only
  * Adding help text to backup (Closes: #1682)
  * Add default message to exceptions in backup
  * Partial revert "Passing backup and main through jshint" (Closes: #1686)

 -- Carl Fürstenberg <carl@excito.com>  Tue, 07 Jun 2011 18:02:13 +0200

bubba-frontend (2.1.40) vincent hugo; urgency=low
